<resources>
    <string name="app_name">Salud-App</string>
    <string name="TextV1">Bienvenid@!</string>
    <string name="TextV2">Regístrate:</string>
    <string name="TextV3">Selecciona tú rol:</string>
    <string name="ImageVF">Fondo</string>
    <string name="Butt1">Profesores</string>
    <string name="Butt2">Estudiantes</string>
    <string name="Butt3">Administradores</string>
    <string name="Butt4">Siguiente</string>
    <string name="ImageButt1">Salida</string>
    <string name="TextV4">Salir</string>
    <string name="ImageButt2">Universidad ABC</string>
    <string name="ImageButt3">Logo APP</string>
    <string name="Butt5">Profesor</string>
    <string name="ImageV1">Carga tú Foto Profesor</string>
    <string name="Butt6">+Subir Foto ↑</string>
    <string name="row1">Nombres: </string>
    <string name="row2">Apellidos: </string>
    <string name="row3">Programa: </string>
    <string name="row4">Contraseña: </string>
    <string name="Butt7">Registrar</string>
    <string name="TextV6">Volver</string>
    <string name="TextV7">Diligencia con tus datos todos los campos a continuación:</string>
    <string name="ImageButt7">Volver</string>
    <string name="Butt8">Estudiante</string>
    <string name="ImageButt8">Volver</string>
    <string name="TextV8">Volver</string>
    <string name="ImageV2">Carga tú Foto Estudiante</string>
    <string name="Butt9">+Subir Foto ↑</string>
    <string name="TextV9">Diligencia con tus datos todos los campos a continuación:</string>
    <string name="Butt10">Registrar</string>
    <string name="ImageButt9">Salir</string>
    <string name="ImageButt10">Volver</string>
    <string name="TextV10">Salir</string>
    <string name="TextV11">Volver</string>
    <string name="TextV12">Registro Completado Exitosamente!</string>
    <string name="TextInputLay1">Usuario</string>
    <string name="EditTextUsuario">Usuario</string>
    <string name="EditTextPassword">Contraseña</string>
    <string name="EditTextUsuario1">Usuario</string>
    <string name="EditTextPassword1">Contraseña</string>
    <string name="Butt11">Ingresar</string>
    <string name="TextV13">¿Olvidaste tú Contraseña?</string>
    <string name="ImageV4">Logo Universidad</string>
</resources>