<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ImageVF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/ImageVF"
        android:scaleType="centerCrop"
        android:src="@mipmap/fondodos_foreground"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/TextV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextV1"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextV2"
        android:textColor="@color/azul"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextV1" />

    <TextView
        android:id="@+id/TextV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/TextV3"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextV2" />

    <Button
        android:id="@+id/Butt1"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttons_styles"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/Butt1"
        android:textAllCaps="false"
        android:textColor="@color/azul"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextV3" />

    <Button
        android:id="@+id/Butt2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/buttons_styles"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/Butt2"
        android:textAllCaps="false"
        android:textColor="@color/azul"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/ImageVF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Butt1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Butt3"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/buttons_styles"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/Butt3"
        android:textAllCaps="false"
        android:textColor="@color/azul"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Butt2" />

    <Button
        android:id="@+id/Butt4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttons_styles2"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/Butt4"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Butt3" />

    <TextView
        android:id="@+id/TextV4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextV4"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/ImageButt1"
        app:layout_constraintTop_toBottomOf="@+id/Butt4"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/ImageButt1"
        android:layout_width="83dp"
        android:layout_height="74dp"
        android:layout_marginTop="14dp"
        android:background="@null"
        android:contentDescription="@string/ImageButt1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Butt4"
        app:srcCompat="@mipmap/exit_foreground"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/ImageButt2"
        android:layout_width="81dp"
        android:layout_height="57dp"
        android:layout_marginTop="45dp"
        android:background="@null"
        app:layout_constraintEnd_toStartOf="@+id/ImageButt3"
        app:layout_constraintTop_toBottomOf="@+id/TextV4"
        app:srcCompat="@mipmap/univabc2_foreground"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ImageButt3"
        android:layout_width="82dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageButt1"
        app:srcCompat="@mipmap/logoapp_foreground"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ImageButt8"
        android:layout_width="67dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:contentDescription="@string/ImageButt8"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Butt4"
        app:srcCompat="@mipmap/volver_foreground"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/TextV8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextV8"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/ImageButt8"
        app:layout_constraintTop_toBottomOf="@+id/Butt4" />

</android.support.constraint.ConstraintLayout>