<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ImageVF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/ImageVF"
        android:scaleType="centerCrop"
        android:src="@mipmap/fondodos_foreground"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="130dp" />

    <Button
        android:id="@+id/Butt8"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttons_styles2"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/Butt8"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ImageV2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Butt8"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <Button
        android:id="@+id/Butt9"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/Butt9"
        android:textColor="@color/azul"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageV2"
        android:textAllCaps="false"
        android:background="@drawable/buttons_styles"/>

    <TextView
        android:id="@+id/TextV9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/TextV9"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Butt9" />

    <TableLayout
        android:id="@+id/TablLayout1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/TextV9"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="21dp">

        <TableRow android:background="@color/azul_claro">

            <TextView
                android:id="@+id/TabLyTextV1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/border_tablelayout"
                android:fontFamily="@font/comfortaa_bold"
                android:padding="10sp"
                android:text="@string/row1"
                android:textAlignment="viewStart"
                android:textColor="@color/azul"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/TabLyTextV2"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/border_tablelayout"
                android:fontFamily="@font/comfortaa_bold"
                android:padding="10sp"
                android:text=""
                android:textAlignment="viewStart"
                android:textColor="@color/azul"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

        </TableRow>

        <TableRow android:background="@color/clarito">

            <TextView
                android:id="@+id/TabLyTextV3"
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/border_tablelayout1"
                android:fontFamily="@font/comfortaa_bold"
                android:padding="10sp"
                android:text="@string/row2"
                android:textAlignment="textStart"
                android:textColor="@color/azul"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/TabLyTextV4"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/border_tablelayout1"
                android:fontFamily="@font/comfortaa_bold"
                android:padding="10sp"
                android:text=""
                android:textAlignment="viewStart"
                android:textColor="@color/azul"
                android:textSize="16sp" />
        </TableRow>

        <TableRow android:background="@color/azul_claro">

            <TextView
                android:id="@+id/TabLyTextV5"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/border_tablelayout"
                android:fontFamily="@font/comfortaa_bold"
                android:padding="10sp"
                android:text="@string/row3"
                android:textAlignment="textStart"
                android:textColor="@color/azul"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/TabLyTextV6"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/border_tablelayout"
                android:fontFamily="@font/comfortaa_bold"
                android:padding="10sp"
                android:text=""
                android:textAlignment="viewStart"
                android:textColor="@color/azul"
                android:textSize="16sp" />

        </TableRow>

        <TableRow android:background="@color/clarito">

            <TextView
                android:id="@+id/TabLyTextV7"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/border_tablelayout1"
                android:fontFamily="@font/comfortaa_bold"
                android:padding="10sp"
                android:text="@string/row4"
                android:textAlignment="textStart"
                android:textColor="@color/azul"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/TabLyTextV8"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/border_tablelayout1"
                android:fontFamily="@font/comfortaa_bold"
                android:padding="10sp"
                android:text=""
                android:textAlignment="viewStart"
                android:textColor="@color/azul"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/Butt10"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttons_styles2"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/Butt10"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TablLayout1" />

    <ImageButton
        android:id="@+id/ImageButt9"
        android:layout_width="83dp"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:contentDescription="@string/ImageButt9"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Butt10"
        app:srcCompat="@mipmap/exit_foreground"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/ImageButt10"
        android:layout_width="67dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/ImageButt10"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Butt10"
        app:srcCompat="@mipmap/volver_foreground"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/TextV10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextV10"
        android:textColor="@color/azul"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/ImageButt9"
        app:layout_constraintTop_toBottomOf="@+id/Butt10" />

    <TextView
        android:id="@+id/TextV11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextV11"
        android:textColor="@color/azul"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/ImageButt10"
        app:layout_constraintTop_toBottomOf="@+id/Butt10"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/ImageButt11"
        android:layout_width="82dp"
        android:layout_height="80dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageButt9"
        app:srcCompat="@mipmap/logoapp_foreground"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ImageButt12"
        android:layout_width="81dp"
        android:layout_height="57dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/ImageButt11"
        app:layout_constraintTop_toBottomOf="@+id/TextV10"
        app:srcCompat="@mipmap/univabc2_foreground"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />


</android.support.constraint.ConstraintLayout>